crates/tui/src/snapshots/tui__view__home__tests__home_picker_open.snap
---
source: crates/tui/src/home_view_tests.rs
assertion_line: 551
expression: "screen(&app, 80, 24)"
---



                     ▀▄ █▀▀▀▀ ▀▀█▀▀ █▀▀█  █▀▀▀▀ █▀▀▀▄
                     ▀▄ █▄▄▄    █   █▀▀█  ████  █▄▄▄▀
                     ▀▄ █       █   ████  █▀▀▀▀ █ ▀▄
                     ▀▄ █     ▄▄█▄▄ █▀▀█  █▄▄▄▄ █   █ 0.0.1
                    ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄                                        ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
› █? for shortcuts    Workspaces

                      › /w
[w]  [no model]  [th
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀  ↑↓ move · Enter open · Esc closes     ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
●  fix the parser                                                              ✕
                    ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀







          ↓ chips and sessions · F1 the key map · Ctrl+C twice to quit
