crates/tui/src/snapshots/tui__view__home__tests__home_picker_overlay_160x48.snap
---
source: crates/tui/src/home_view_tests.rs
assertion_line: 1416
expression: "screen(&picking(160, 48), 160, 48)"
---






                                                             ▀▄ █▀▀▀▀ ▀▀█▀▀ █▀▀█  █▀▀▀▀ █▀▀▀▄
                                                             ▀▄ █▄▄▄    █   █▀▀█  ████  █▄▄▄▀
                                                             ▀▄ █       █   ████  █▀▀▀▀ █ ▀▄
                                                             ▀▄ █     ▄▄█▄▄ █▀▀█  █▄▄▄▄ █   █ 0.0.1

                              ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
                              › █? for shortcuts


                              [w]  [no model]  [thinking: default]  enter starts a session
                              ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
                              ●  fix the parser                                                                                  ✕

                                                            ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄

                                                              Workspaces

                                                              › /w
                                                                /repo0

                                                              ↑↓ move · enter open · esc closes

                                                            ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀


















                                                  ↓ chips and sessions · F1 the key map · Ctrl+C twice to quit
