crates/tui/src/snapshots/tui__view__home__tests__home_picker_scrolled.snap
---
source: crates/tui/src/home_view_tests.rs
expression: "screen(&app, 80, 24)"
---
/repo1
/repo2
/repo3
/repo4               ▀▄ █▀▀▀▀ ▀▀█▀▀ █▀▀█  █▀▀▀▀ █▀▀▀▄
/repo5               ▀▄ █▄▄▄    █   █▀▀█  ████  █▄▄▄▀
/repo6               ▀▄ █       █   ████  █▀▀▀▀ █ ▀▄
/repo7               ▀▄ █     ▄▄█▄▄ █▀▀█  █▄▄▄▄ █   █ 0.0.1
/repo8
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
› █? for shortcuts


[w]  [no model]  [thinking: default]  enter starts a session
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
●  fix the parser                                                              ✕
●  fix the parser                                                              ✕
●  fix the parser                                                              ✕
●  fix the parser                                                              ✕
●  fix the parser                                                              ✕
●  fix the parser                                                              ✕
●  fix the parser                                                              ✕
●  fix the parser                                                              ✕
●  fix the parser                                                              ✕
           ↓ the session list · F1 the key map · Ctrl+C twice to quit
