crates/tui/src/snapshots/tui__view__home__tests__home_rows_with_their_x.snap
---
source: crates/tui/src/home_view_tests.rs
expression: "screen(&app, 80, 24)"
---



                     ▀▄ █▀▀▀▀ ▀▀█▀▀ █▀▀█  █▀▀▀▀ █▀▀▀▄
                     ▀▄ █▄▄▄    █   █▀▀█  ████  █▄▄▄▀
                     ▀▄ █       █   ████  █▀▀▀▀ █ ▀▄
                     ▀▄ █     ▄▄█▄▄ █▀▀█  █▄▄▄▄ █   █ 0.0.1

▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
› █? for shortcuts


[w]  [no model]  [thinking: default]  enter starts a session
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
●  fix the parser                                                              ✕
○  tidy docs                                                                   ✕
?  s_cccccccccccccccc  cannot attach






           ↓ the session list · F1 the key map · Ctrl+C twice to quit
