crates/tui/src/snapshots/tui__view__home__tests__home_scoped_with_the_toggle.snap
---
source: crates/tui/src/home_view_tests.rs
expression: "screen(&app, 80, 24)"
---



                     ▀▄ █▀▀▀▀ ▀▀█▀▀ █▀▀█  █▀▀▀▀ █▀▀▀▄
                     ▀▄ █▄▄▄    █   █▀▀█  ████  █▄▄▄▀
                     ▀▄ █       █   ████  █▀▀▀▀ █ ▀▄
                     ▀▄ █     ▄▄█▄▄ █▀▀█  █▄▄▄▄ █   █ 0.0.1

▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
› █? for shortcuts


[w]  [ ] new worktree  [no model]  [thinking: default]  Enter starts a session
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
1 waiting in other projects · show all
✓  here                                                                        ✕







          ↓ chips and sessions · F1 the key map · Ctrl+C twice to quit
